[tool.poetry]
name = "re-data"
version = "0.1.0"
description = ""
authors = ["Chipply <grantcwittenberg@gmail.com>"]
readme = "README.md"
packages = [{include = "re_data"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
